# mumasp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
arduino/mumasp/: mumasp.ino
mumasp/: __init__.py  logger.py  measurement.py  telescope.py
tests/: fixtures.py  test_measurement.py  test_telescope.py
